--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 /.phpunit.cache
-/node_modules
 /public/build
 /public/hot
 /public/storage
@@ -16,3 +15,5 @@ yarn-error.log
 /.fleet
 /.idea
 /.vscode
+package-lock.json
+node_modules
