--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@tailwindcss/aspect-ratio": "^0.4.2",
         "@types/react-beautiful-dnd": "^13.1.8",
         "@types/react-dom": "^18.2.22",
         "autoprefixer": "^10.4.19",
@@ -17,7 +18,11 @@
         "vite": "^5.0.0"
     },
     "dependencies": {
+        "@headlessui/react": "^1.7.18",
+        "@heroicons/react": "^2.1.3",
         "@vitejs/plugin-react": "^4.2.1",
+        "flowbite": "^2.3.0",
+        "flowbite-react": "^0.8.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     }
