--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
         "@vitejs/plugin-react": "^4.2.1",
         "flowbite": "^2.3.0",
         "flowbite-react": "^0.8.0",
+        "localforage": "^1.10.0",
+        "match-sorter": "^6.3.4",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "react-router-dom": "^6.22.3",
+        "sort-by": "^1.2.0"
     }
 }
