feat(react): CRUD review

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     },
     "devDependencies": {
         "@tailwindcss/aspect-ratio": "^0.4.2",
+        "@types/node": "^20.12.7",
         "@types/react-beautiful-dnd": "^13.1.8",
         "@types/react-dom": "^18.2.22",
         "autoprefixer": "^10.4.19",
