--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "dependencies": {
         "@headlessui/react": "^1.7.18",
         "@heroicons/react": "^2.1.3",
+        "@stripe/react-stripe-js": "^2.7.0",
+        "@stripe/stripe-js": "^3.3.0",
         "@tailwindcss/forms": "^0.5.7",
         "@vitejs/plugin-react": "^4.2.1",
         "flowbite": "^2.3.0",
