maj(laravel):maj env file

--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@ DB_PORT=3306
 DB_DATABASE=mister_beer
 DB_USERNAME=root
 DB_PASSWORD=
-# Si dessous mettre vos propre chemins
+# Si dessous mettre vos propres chemins
 DB_MYSQL_PATH="C:/xampp/mysql/bin/mysql"
 DB_DUMP_SQL="C:/xampp/mysql/bin/mysqldump"
 
